Fixed issue on displaying icons on fetures on mobile version

--- a/site/styles/content_mobile.css
+++ b/site/styles/content_mobile.css
@@ -351,22 +351,22 @@ div.about_article ul li:nth-child(-n+4):before {
 	top: 0px;
 	background-image: url(../images/about/icons.svg);
 	background-repeat: no-repeat;
-	background-position: -75px 10px;
+	background-position: -75px 0px;
 	background-size: 100px 25px;
 	width: 25px;
 	height: 50px;
 }
 
 div.about_article ul li:nth-of-type(2):before {
-	background-position: -0px 10px;
+	background-position: -0px 0px;
 }
 
 div.about_article ul li:nth-of-type(3):before {
-    background-position: -25px 10px;
+    background-position: -25px 0px;
 }
 
 div.about_article ul li:nth-of-type(4):before {
-	background-position: -50px 10px;
+	background-position: -50px 0px;
 }
 
 div.about_article ul li:nth-of-type(5) {
